fix headshot sizing on mobile (removed)

--- a/css/main.css
+++ b/css/main.css
@@ -91,7 +91,17 @@ body .section,html .section{display:-webkit-box;display:-ms-flexbox;display:flex
 @media screen and (max-width:360px){.intro__hello .emoji,.intro__tagline .emoji{width:25px;height:25px}}
 @media screen and (max-width:1024px){body #top-button,html #top-button{bottom:20px;right:7px;width:35px}}
 @media screen and (max-width:480px){body #top-button,html #top-button{bottom:15px;right:3px}}
+@media screen and (min-width: 320px) {
+      .intro-headshot{
+            display:none !important;
+   }
+ }
 
+@media screen and (max-width: 768px) {
+      .intro-headshot  {
+            display:none !important;
+   }
+ }
 .switch-wrapper{display:-webkit-box;display:-ms-flexbox;display:flex;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;position:absolute;top:20px;right:30px}
 @media screen and (max-width:480px){.switch-wrapper{top:10px;right:20px}}
 .switch-wrapper .moon,.switch-wrapper .sun{width:17px;height:17px}
